Tweak .grid-image to prevent clipping

--- a/custom/overrides/assets/stylesheets/home.css
+++ b/custom/overrides/assets/stylesheets/home.css
@@ -478,9 +478,7 @@ h1, h2, h3, h4, h5 {
 
 .grid-image img {
     max-width: 100%;
-    aspect-ratio: 16 / 9;
-
-    border-radius: var(--br-16);
+    border-radius: var(--br-04);
 }
 
 /* ====== FAQ ====== */
